--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Ernesto Quispe - WDD 230 - Web Frontend Development</title>
     <meta name="description" content="Ernesto Quispe | WDD 230 - Webfrontend Development | A course assignment portal with the list of the assignments listed by week.">
     <meta name="author" content="Ernesto Quispe">
-
+    <link rel="icon" href="images/favicon.ico">
     <link rel=stylesheet href="styles/base.css">
 </head>
 
