--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:title" content="Ernesto Quispe - WDD 230 - Web Frontend Development">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://noticias-pe.laiglesiadejesucristo.org/media/960x540/chiclayo-iglesia-de-jesucristo.png">
+    <meta property="og:url" content="https://ernesto-quispe.github.io/wdd230/">
     <title>Ernesto Quispe - WDD 230 - Web Frontend Development</title>
     <meta name="description" content="Ernesto Quispe | WDD 230 - Webfrontend Development | A course assignment portal with the list of the assignments listed by week.">
     <meta name="author" content="Ernesto Quispe">
