Home Page Enhancement

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <meta name="description" content="Ernesto Quispe | WDD 230 - Webfrontend Development | A course assignment portal with the list of the assignments listed by week.">
     <meta name="author" content="Ernesto Quispe">
     <link rel="icon" href="images/favicon.ico">
+    <link rel="stylesheet" href="styles/normalize-ernesto.css">    
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel=stylesheet href="styles/base.css">
+    <link rel=stylesheet href="styles/larger.css">
 </head>
 
 <body>
