--- a/index.html
+++ b/index.html
@@ -39,12 +39,13 @@
             <ul>
                 <li>Week1:
                     <a href="https://ernesto-quispe.github.io/wdd230/lesson01/holygrail.html" target="_blank">Holy Layout</a>
-                    <span> | </span>
-                    <a href="#">Test 1.1</a>
                 </li>
                 <li>Week2:
-                    <a href="#">Test 2</a>
-                    <a href="#">Test 2.1</a>
+                    <a href="https://ernesto-quispe.github.io/wdd230/lesson02/design.html" target="_blank">Web design principals</a>
+                    <span> | </span>
+                    <a href="https://ernesto-quispe.github.io/wdd230/lesson02/media-query.html" target="_blank">Media Query</a>
+                    <span> | </span>
+                    <a href="https://ernesto-quispe.github.io/wdd230/lesson02/design-principles.html" target="_blank">Design Principles</a>
                 </li>
             </ul>
         </section>
