--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -6,22 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Ernesto Quispe - WDD 230 - Web Frontend Development - Design Principles">
     <meta property="og:type" content="website">
-    <!-- <meta property="og:image" content="https://noticias-pe.laiglesiadejesucristo.org/media/960x540/chiclayo-iglesia-de-jesucristo.png"> -->
+    <meta property="og:image" content="https://noticias-pe.laiglesiadejesucristo.org/media/960x540/chiclayo-iglesia-de-jesucristo.png">
     <meta property="og:url" content="https://ernesto-quispe.github.io/wdd230/">
     <title>Ernesto Quispe - WDD 230 - Web Frontend Development - Design Principles</title>
     <meta name="description" content="Ernesto Quispe | WDD 230 - Webfrontend Development | Examples of a few design principles.">
     <meta name="author" content="Ernesto Quispe">
     <link rel="icon" href="images/favicon.ico">
-  <!--fonts-->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-
-  <!--css rules-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-  <link rel="stylesheet" href="styles/base.css" />
-  <link rel="stylesheet" href="styles/medium.css" />
-  <link rel="stylesheet" href="styles/large.css" />
-  <!--javascript-->
-  <script defer src="js/dates.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" href="styles/base.css" />
+    <link rel="stylesheet" href="styles/medium.css" />
+    <link rel="stylesheet" href="styles/large.css" />
 </head>
 
 <body>
