--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <img src="images/my.jpg" alt="A picture of me">
         <h1>Ernesto Quispe</h1>
     </header>
-
-    <nav>
-        <a href="#">Home</a>
+    <button id="menu"></button>
+    <nav class="navigation">
+        <a href="#" class="active">Home</a>
         <a href="lesson03/chamber-site-plan.html">Site Plan</a>
         <a href="chamber/">Chamber</a>
         <a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a>
@@ -47,6 +47,14 @@
                     <span> | </span>
                     <a href="https://ernesto-quispe.github.io/wdd230/lesson02/design-principles.html" target="_blank">Design Principles</a>
                 </li>
+                <li>Week3:
+                    <a href="https://codepen.io/ernesto-quispe-the-lessful/pen/JjzOdMR" target="_blank">CSS Psuedo Elements</a>
+                    <span> | </span>
+                    <a href="https://codepen.io/ernesto-quispe-the-lessful/pen/MWxOwBg" target="_blank">"Hamburger" Menu</a>
+                    <span> | </span>                    
+                    <a href="images/CssCombinators.png" target="_blank">CSS Combinators</a>
+                </li>
+                
             </ul>
         </section>
 
@@ -56,13 +64,16 @@
             <div class="visits">visits</div>
         </section>
     </main>
-
+    <div class="map"> 
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d53278.88576177606!2d-70.55873582905564!3d-33.42505990386173!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662cc2ec8c925bd%3A0x82ed9a4180d925d0!2sLas%20Condes%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses-419!2scl!4v1706243785061!5m2!1ses-419!2scl" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
     <footer>
         <p>&copy; <span id="copywriteyear">Year </span>Ernesto Quispe - Peru</p>
         <p id="lastmod"></p>
     </footer>
 
     <script src="scripts/getdates.js"></script>
+    <script src="scripts/menu.js"></script>
 </body>
 
 </html>
