--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <img src="images/my.jpg" alt="A picture of me">
         <h1>Ernesto Quispe</h1>
     </header>
-    <button id="menu"></button>
+    <button id="menu" aria-label="menu button"></button>
     <nav class="navigation">
         <a href="#" class="active">Home</a>
         <a href="lesson03/chamber-site-plan.html">Site Plan</a>
@@ -65,7 +65,7 @@
         </section>
     </main>
     <div class="map"> 
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d53278.88576177606!2d-70.55873582905564!3d-33.42505990386173!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662cc2ec8c925bd%3A0x82ed9a4180d925d0!2sLas%20Condes%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses-419!2scl!4v1706243785061!5m2!1ses-419!2scl" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d53278.88576177606!2d-70.55873582905564!3d-33.42505990386173!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662cc2ec8c925bd%3A0x82ed9a4180d925d0!2sLas%20Condes%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses-419!2scl!4v1706243785061!5m2!1ses-419!2scl" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="my map"></iframe>
     </div>
     <footer>
         <p>&copy; <span id="copywriteyear">Year </span>Ernesto Quispe - Peru</p>
