Chamber Site Plan, link index

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
                     <a href="https://codepen.io/ernesto-quispe-the-lessful/pen/MWxOwBg" target="_blank">"Hamburger" Menu</a>
                     <span> | </span>                    
                     <a href="images/CssCombinators.png" target="_blank">CSS Combinators</a>
+                    <span> | </span>
+                    <a href="https://ernesto-quispe.github.io/wdd230/lesson02/lesson03/chamber-site-plan.html" target="_blank">"chamber site plan</a>
                 </li>
                 
             </ul>
