--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <span> | </span>                    
                     <a href="images/CssCombinators.png" target="_blank">CSS Combinators</a>
                     <span> | </span>
-                    <a href="https://ernesto-quispe.github.io/wdd230/lesson02/lesson03/chamber-site-plan.html" target="_blank">"chamber site plan</a>
+                    <a href="https://ernesto-quispe.github.io/wdd230/lesson03/chamber-site-plan.html" target="_blank">Chamber Site Plan</a>
                 </li>
                 
             </ul>
