Commerce Home Page

--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
                     <span> | </span>
                     <a href="https://ernesto-quispe.github.io/wdd230/lesson03/chamber-site-plan.html" target="_blank">Chamber Site Plan</a>
                 </li>
+                <li>Week4:
+                    <a href="https://codepen.io/ernesto-quispe-the-lessful/pen/vYPRKrW" target="_blank">CSS Pseudo-Classes</a>
+                    <span> | </span>
+                </li>                
                 
             </ul>
         </section>
