--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 <li>Week4:
                     <a href="https://codepen.io/ernesto-quispe-the-lessful/pen/vYPRKrW" target="_blank">CSS Pseudo-Classes</a>
                     <span> | </span>
+                    <a href="chamber/" target="_blank">Chamber</a>                    
                 </li>                
                 
             </ul>
