Chamber Home Page Build

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -72,7 +72,7 @@
         <span class="dot" onclick="currentSlide(3)"></span>
         <span class="dot" onclick="currentSlide(4)"></span>
       </div>
-      <h1>SANTIAGO CHAMBER OF COMMERCE</h1>
+      <h1>Santiago Chamber of Commerce</h1>
       <section class="hero-banner">
         <h2>WHO WE ARE</h2>
         <p>
