--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
                     <span> | </span>
                     <a href="chamber/" target="_blank">Chamber</a>                    
                 </li>                
-                
+                <li>Week5:
+                    <a href="https://ernesto-quispe.github.io/wdd230/lesson05/bom.html" target="_blank">Book of Mormon</a>               
+                </li>   
             </ul>
         </section>
 
