--- a/lesson05/bom.html
+++ b/lesson05/bom.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ernesto Quispe | WDD 230 - Webfrontend Development | Book of Mormon top ten.">
+    <meta name="author" content="Ernesto Quispe">
     <title>BOM</title>
     <link rel="stylesheet" href="styles/base.css">
   </head>
