--- a/chamber/index.html
+++ b/chamber/index.html
@@ -29,9 +29,20 @@
         <a href="#">Discover</a>
         <a href="#">Directory</a>
         <a href="#">Contact Us</a>
-      </nav>  
+      </nav>
+      <!-- Rectangular switch -->
+      <!-- <label class="switch">
+        <input type="checkbox">
+        <span class="slider"></span>
+      </label>
+   -->
+      <!-- Rounded switch -->
+      <label class="switch">
+        <input type="checkbox" id="toggleCheckbox">
+        <span class="slider round"></span>
+      </label>
     </header>
-
+  
     <main>
       <!-- Slideshow container -->
       <div class="slideshow-container">
@@ -161,5 +172,7 @@
     <script src="../scripts/getdates.js"></script>
     <script src="../scripts/menu.js"></script>
     <script src="scripts/slides.js"></script>
+    <script src="scripts/slider.js"></script>
+
   </body>
 </html>
