--- a/chamber/index.html
+++ b/chamber/index.html
@@ -30,10 +30,10 @@
         <span class="slider round"></span>
       </label>      
       <nav class="navigation">
-        <a href="#" class="active">Home</a>
-        <a href="#">Discover</a>
-        <a href="#">Directory</a>
-        <a href="#">Contact Us</a>
+        <a href="#" class="navLinks active">Home</a>
+        <a href="#" class="navLinks">Discover</a>
+        <a href="#" class="navLinks">Directory</a>
+        <a href="#" class="navLinks">Contact Us</a>
       </nav>
     </header>
   
