--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <header>
-        <img src="images/my.jpg" alt="A picture of me">
+        <img src="images/my.webp" alt="A picture of me">
         <h1>Ernesto Quispe</h1>
     </header>
     <button id="menu" aria-label="menu button"></button>
@@ -33,6 +33,16 @@
     </nav>
 
     <main>
+        <div class="hero">
+            <picture>
+                <source media="(max-width: 500px)" srcset="images/LoganTemple-small-alt.webp">
+                <source media="(max-width: 1280px)" srcset="images/LoganTemple-Medium.webp">
+                <img src="images/Logan-Utah-Temple-Large.webp" alt="Logan Temple Hero Image" width="1280" height="1024">
+            </picture>
+            <div class="herolabel">
+                <p>Logan Utah Temple</p>
+            </div>
+        </div>
         <h2>WDD 230: Web Frontend Development</h2>
         <section class="card">
             <h3>Learning Activities</h3>
@@ -64,6 +74,11 @@
                 <li>Week5:
                     <a href="https://ernesto-quispe.github.io/wdd230/lesson05/bom.html" target="_blank">Book of Mormon</a>               
                 </li>   
+                <li>Week6:
+                    <a href="https://ernesto-quispe.github.io/wdd230/lesson06/images/landscape-520.webp" target="_blank">WebP</a>     
+                    <span> | </span>       
+                    <a href="https://ernesto-quispe.github.io/wdd230/lesson06/responsive-images.html" target="_blank">Responsive Images</a>       
+                </li>                   
             </ul>
         </section>
 
