--- a/chamber/index.html
+++ b/chamber/index.html
@@ -22,7 +22,7 @@
 
   <body>
     <header>
-      <img src="images/ccs-image.png" alt="CCS Logo">
+      <img src="images/ccs-image.webp" alt="CCS Logo">
       <button id="menu" aria-label="menu button"></button>
       <!-- Rounded switch -->
       <label class="switch">
@@ -38,6 +38,14 @@
     </header>
   
     <main>
+
+      <div class="hero">
+        <picture>
+            <source srcset="images/wdd230-org-small.webp" media="(max-width: 600px)">
+            <source srcset="images/wdd230-org-medium.webp" media="(max-width: 800px)">
+            <img src="images/wdd230-org-large.webp" alt="Hero Image" width="800" height="533">
+        </picture>
+     </div>
       <!-- Slideshow container -->
       <div class="slideshow-container">
         <!-- Full-width images with number and caption text -->
@@ -134,12 +142,33 @@
       </div>
 
       <div class="weather-join">
-        <section class="weather-join-card">
-          <h3>
-            Weather
-          </h3>
-          <img src="https://placehold.co/300x200/png" alt="Place Holder for weathe rinformation">
-        </section>
+        <section id="weather" class="weather-join-card">
+          <h3>Weather for Today</h3>
+          <div class="weatherDiv">
+              <div>
+                  Current:
+                  <div>
+                      <span class="currentTemp">45</span>
+                      <span>&deg; F</span>
+                  </div>
+              </div>
+              <div>
+                  Windspeed:
+                  <div>
+                      <span class="windSpeed">30</span>
+                      <span>MPH</span>
+                  </div>
+              </div>
+              <div>
+                  Wind Chill:
+                  <div>
+                      <span class="windChill"></span>
+                  </div>
+              </div>
+          </div>
+      </section>
+
+
         <section class="weather-join-card">
           <h3>
             Join Us
@@ -167,6 +196,6 @@
     <script src="../scripts/menu.js"></script>
     <script src="scripts/slides.js"></script>
     <script src="scripts/slider.js"></script>
-
+    <script src="scripts/windchill.js"></script>
   </body>
 </html>
