--- a/chamber/index.html
+++ b/chamber/index.html
@@ -51,25 +51,25 @@
         <!-- Full-width images with number and caption text -->
         <div class="mySlides fade">
           <div class="numbertext">1 / 4</div>
-          <img src="images/rsz_1rsz_1rsz_4pexels-alisha-lubben-2017747.jpg" alt="Banner Hero Santiago Chile">
+          <img src="images/rsz_1rsz_1rsz_4pexels-alisha-lubben-2017747.webp" alt="Banner Hero Santiago Chile">
           <div class="text">Santiago Chile</div>
         </div>
 
         <div class="mySlides fade">
           <div class="numbertext">2 / 4</div>
-          <img src="images/banner-home.jpg" alt="Banner Home">
+          <img src="images/banner-home.webp" alt="Banner Home">
           <div class="text">CencoSud</div>
         </div>
 
         <div class="mySlides fade">
           <div class="numbertext">3 / 4</div>
-          <img src="images/banner-home-licanten2024.jpg" alt="Banner Licanten2024">
+          <img src="images/banner-home-licanten2024.webp" alt="Banner Licanten2024">
           <div class="text">Asmar</div>
         </div>
 
         <div class="mySlides fade">
           <div class="numbertext">4 / 4</div>
-          <img src="images/BannerWeb-beneficios2024.jpg" alt="Banner Beneficios">
+          <img src="images/BannerWeb-beneficios2024.webp" alt="Banner Beneficios">
           <div class="text">Banco Ripley</div>
         </div>
         <!-- Next and previous buttons -->
@@ -101,7 +101,7 @@
 
       <div class="businesses">
         <section class="business-card">
-          <img src="images/rsz_rsz_logo_ripley.png" alt="Ripley Logo">
+          <img src="images/rsz_rsz_logo_ripley.webp" alt="Ripley Logo">
           <h3>Ripley</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -114,7 +114,7 @@
           </p>
         </section>
         <section class="business-card">
-          <img src="images/rsz_1rsz_falabella_logo_png1.png" alt="Falabella Logo">
+          <img src="images/rsz_1rsz_falabella_logo_png1.webp" alt="Falabella Logo">
           <h3>Falabella</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -127,7 +127,7 @@
           </p>          
         </section>
         <section id="cencosud" class="business-card">
-          <img src="images/rsz_rsz_2560px-cencosud_logosvg.png" alt="Cencosud Logo">
+          <img src="images/rsz_rsz_2560px-cencosud_logosvg.webp" alt="Cencosud Logo">
           <h3>Cencosud</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
