--- a/index.html
+++ b/index.html
@@ -51,34 +51,42 @@
                     <a href="https://ernesto-quispe.github.io/wdd230/lesson01/holygrail.html" target="_blank">Holy Layout</a>
                 </li>
                 <li>Week2:
-                    <a href="https://ernesto-quispe.github.io/wdd230/lesson02/design.html" target="_blank">Web design principals</a>
+                    <a href="https://ernesto-quispe.github.io/wdd230/lesson02/design.html" target="_blank">Web design
+                        principals</a>
                     <span> | </span>
                     <a href="https://ernesto-quispe.github.io/wdd230/lesson02/media-query.html" target="_blank">Media Query</a>
                     <span> | </span>
-                    <a href="https://ernesto-quispe.github.io/wdd230/lesson02/design-principles.html" target="_blank">Design Principles</a>
+                    <a href="https://ernesto-quispe.github.io/wdd230/lesson02/design-principles.html" target="_blank">Design
+                        Principles</a>
                 </li>
                 <li>Week3:
                     <a href="https://codepen.io/ernesto-quispe-the-lessful/pen/JjzOdMR" target="_blank">CSS Psuedo Elements</a>
                     <span> | </span>
                     <a href="https://codepen.io/ernesto-quispe-the-lessful/pen/MWxOwBg" target="_blank">"Hamburger" Menu</a>
-                    <span> | </span>                    
+                    <span> | </span>
                     <a href="images/CssCombinators.png" target="_blank">CSS Combinators</a>
                     <span> | </span>
-                    <a href="https://ernesto-quispe.github.io/wdd230/lesson03/chamber-site-plan.html" target="_blank">Chamber Site Plan</a>
+                    <a href="https://ernesto-quispe.github.io/wdd230/lesson03/chamber-site-plan.html" target="_blank">Chamber
+                        Site Plan</a>
                 </li>
                 <li>Week4:
                     <a href="https://codepen.io/ernesto-quispe-the-lessful/pen/vYPRKrW" target="_blank">CSS Pseudo-Classes</a>
                     <span> | </span>
-                    <a href="chamber/" target="_blank">Chamber</a>                    
-                </li>                
+                    <a href="chamber/" target="_blank">Chamber</a>
+                </li>
                 <li>Week5:
-                    <a href="https://ernesto-quispe.github.io/wdd230/lesson05/bom.html" target="_blank">Book of Mormon</a>               
-                </li>   
+                    <a href="https://ernesto-quispe.github.io/wdd230/lesson05/bom.html" target="_blank">Book of Mormon</a>
+                </li>
                 <li>Week6:
-                    <a href="https://ernesto-quispe.github.io/wdd230/lesson06/images/landscape-520.webp" target="_blank">WebP</a>     
-                    <span> | </span>       
-                    <a href="https://ernesto-quispe.github.io/wdd230/lesson06/responsive-images.html" target="_blank">Responsive Images</a>       
-                </li>                   
+                    <a href="https://ernesto-quispe.github.io/wdd230/lesson06/images/landscape-520.webp" target="_blank">WebP</a>
+                    <span> | </span>
+                    <a href="https://ernesto-quispe.github.io/wdd230/lesson06/responsive-images.html" target="_blank">Responsive
+                        Images</a>
+                <li>Week7:
+                    <a href="https://ernesto-quispe.github.io/wdd230/lesson07/lazyloading.html" target="_blank">Lazy Loading</a>
+                    <span> | </span>
+                    <a href="#" target="_blank">LocalStorage Example</a>
+                </li>
             </ul>
         </section>
 
