--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <li>Week7:
                     <a href="https://ernesto-quispe.github.io/wdd230/lesson07/lazyload.html" target="_blank">Lazy Loading</a>
                     <span> | </span>
-                    <a href="#" target="_blank">LocalStorage Example</a>
+                    <a href="https://ernesto-quispe.github.io/wdd230/lesson07/Bom/bom.html" target="_blank">LocalStorage Example</a>
                 </li>
             </ul>
         </section>
