--- a/lesson07/lazyload.html
+++ b/lesson07/lazyload.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lazyload</title>
     <link rel="stylesheet" href="styles/base.css">
 </head>
 
@@ -13,16 +13,18 @@
         <h1>WDD230 Lazy Loading</h1>
     </header>
     <main>
-        <img src="https://loremflickr.com/600/600/dog" alt="a picture of a dog" loading="lazy" width="600" height="600">
-        <img src="https://loremflickr.com/600/600/paris" alt="a picture of a dog" loading="lazy" width="600" height="600">
-        <img src="https://loremflickr.com/600/600/space" alt="a picture of a dog" loading="lazy" width="600" height="600">
-        <img src="https://loremflickr.com/600/600/river" alt="a picture of a dog" loading="lazy" width="600" height="600">
-        <img src="https://loremflickr.com/600/600/cat" alt="a picture of a dog" loading="lazy" width="600" height="600">
-        <img src="https://loremflickr.com/600/600/panda" alt="a picture of a dog" loading="lazy" width="600" height="600">
+        <img src="https://loremflickr.com/400/600/dog" alt="a picture of a dog" loading="lazy" width="400" height="600">
+        <img src="https://loremflickr.com/400/600/paris" alt="a picture of a paris" loading="lazy" width="400" height="600">
+        <img src="https://loremflickr.com/400/600/space" alt="a picture of a space" loading="lazy" width="400" height="600">
+        <img src="https://loremflickr.com/400/600/river" alt="a picture of a river" loading="lazy" width="400" height="600">
+        <img src="https://loremflickr.com/400/600/cat" alt="a picture of a cat" loading="lazy" width="400" height="600">
+        <img src="https://loremflickr.com/400/600/panda" alt="a picture of a panda" loading="lazy" width="400" height="600">
     </main>
     <footer>
-        <p>WDD230 | Ernesto Quispe | 2024</p>
+        <p>&copy; <span id="copywriteyear">Year </span>Ernesto Quispe - Peru</p>
+        <p id="lastmod"></p>
     </footer>
+    <script src="scripts/getdates.js"></script>
 </body>
 
 </html>
