--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 
     <script src="scripts/getdates.js"></script>
     <script src="scripts/menu.js"></script>
+    <script src="scripts/visits.js"></script>
 </body>
 
 </html>
