--- a/chamber/index.html
+++ b/chamber/index.html
@@ -30,8 +30,8 @@
         <span class="slider round"></span>
       </label>      
       <nav class="navigation">
-        <a href="#" class="navLinks active">Home</a>
-        <a href="#" class="navLinks">Discover</a>
+        <a href="index.html" class="navLinks active">Home</a>
+        <a href="discover.html" class="navLinks">Discover</a>
         <a href="#" class="navLinks">Directory</a>
         <a href="#" class="navLinks">Contact Us</a>
       </nav>
@@ -39,13 +39,13 @@
   
     <main>
 
-      <div class="hero">
+      <!-- <div class="hero">
         <picture>
             <source srcset="images/wdd230-org-small.webp" media="(max-width: 600px)">
             <source srcset="images/wdd230-org-medium.webp" media="(max-width: 800px)">
             <img src="images/wdd230-org-large.webp" alt="Hero Image" width="800" height="533">
         </picture>
-     </div>
+     </div> -->
       <!-- Slideshow container -->
       <div class="slideshow-container">
         <!-- Full-width images with number and caption text -->
