Chamber Discover Page Audit

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -36,13 +36,14 @@
         <a href="#" class="navLinks">Contact Us</a>
       </nav>
     </header>
-  
+    
     <main class="discover-main">
+      <h1>Discover Santiago</h1>
       <div class="left-column">
         <section class="history">
-          <h1>
+          <h3>
             Santiago in the Colonial Period
-          </h1>
+          </h3>
                 
           <p>Santiago gradually became a capital city, where the main institutions and buildings were established. One example
             was the Main Church, the Palace of the Royal Court, the Governor's House and the Town Council, clear evidence
@@ -60,7 +61,7 @@
             18th September of 1810.</p>
 
         </section>
-        <section class="events">
+        <div class="events">
           <section class="event-card">
             <h3>
               Ecommerce Innovation Summit
@@ -73,8 +74,8 @@
             </h3>
             <img src="images/Fashion-online.webp" alt="Fashion Online" loading="lazy" width="600" height="400">
           </section>
-        </section>
-        <section class="training">
+        </div>
+        <div class="training">
           <section class="training-card">
             <h3>
               Portal Comex Training
@@ -95,7 +96,7 @@
               Online <br>
             </p>
           </section>
-        </section>
+        </div>
         <section class="news">
              <h3>Last Week's News</h3>
             <img src="images/ReunionCCS.webp" alt="CCS meeting" loading="lazy" width="600" height="400">
