--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -38,7 +38,7 @@
     </header>
     
     <main class="discover-main">
-      <h1>Discover Santiago</h1>
+      <h1>Santiago Chamber of Commerce</h1>
       <div class="left-column">
         <section class="history">
           <h3>
