--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
     </header>
     <button id="menu" aria-label="menu button"></button>
     <nav class="navigation">
-        <a href="#" class="active">Home</a>
+        <a href="index.html" class="active">Home</a>
         <a href="lesson03/chamber-site-plan.html">Site Plan</a>
         <a href="chamber/">Chamber</a>
         <a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a>
         <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/mosiah/2?lang=eng&id=p41#p41" target="_blank">Scripture</a>
+        <a href="form.html">Form</a>
     </nav>
 
     <main>
@@ -87,6 +88,11 @@
                     <span> | </span>
                     <a href="https://ernesto-quispe.github.io/wdd230/lesson07/Bom/bom.html" target="_blank">LocalStorage Example</a>
                 </li>
+                <li>Week8:
+                    <a href="https://ernesto-quispe.github.io/wdd230/lesson08/tablebuild.html" target="_blank">HTML Tables</a>
+                    <span> | </span>
+                    <a href="https://ernesto-quispe.github.io/wdd230/lesson08/form-start/Form-start/index.html" target="_blank">HTML Forms</a>
+                </li>                
             </ul>
         </section>
 
