Chamber Join Page

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -33,7 +33,7 @@
         <a href="index.html" class="navLinks active">Home</a>
         <a href="discover.html" class="navLinks">Discover</a>
         <a href="#" class="navLinks">Directory</a>
-        <a href="#" class="navLinks">Contact Us</a>
+        <a href="join.html" class="navLinks">Join</a>
       </nav>
     </header>
     
