--- a/chamber/index.html
+++ b/chamber/index.html
@@ -33,7 +33,7 @@
         <a href="index.html" class="navLinks active">Home</a>
         <a href="discover.html" class="navLinks">Discover</a>
         <a href="#" class="navLinks">Directory</a>
-        <a href="#" class="navLinks">Contact Us</a>
+        <a href="join.html" class="navLinks">Join</a>
       </nav>
     </header>
   
@@ -52,25 +52,25 @@
         <div class="mySlides fade">
           <div class="numbertext">1 / 4</div>
           <img src="images/rsz_1rsz_1rsz_4pexels-alisha-lubben-2017747.webp" alt="Banner Hero Santiago Chile">
-          <div class="text">Santiago Chile</div>
+          <!-- <div class="text">Santiago Chile</div> -->
         </div>
 
         <div class="mySlides fade">
           <div class="numbertext">2 / 4</div>
           <img src="images/banner-home.webp" alt="Banner Home">
-          <div class="text">CencoSud</div>
+          <!-- <div class="text">CencoSud</div> -->
         </div>
 
         <div class="mySlides fade">
           <div class="numbertext">3 / 4</div>
           <img src="images/banner-home-licanten2024.webp" alt="Banner Licanten2024">
-          <div class="text">Asmar</div>
+          <!-- <div class="text">Asmar</div> -->
         </div>
 
         <div class="mySlides fade">
           <div class="numbertext">4 / 4</div>
           <img src="images/BannerWeb-beneficios2024.webp" alt="Banner Beneficios">
-          <div class="text">Banco Ripley</div>
+          <!-- <div class="text">Banco Ripley</div> -->
         </div>
         <!-- Next and previous buttons -->
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
