--- a/chamber/join.html
+++ b/chamber/join.html
@@ -43,7 +43,7 @@
             <fieldset>
                 <label class="top">First Name* <input type="text" name="fname" required pattern="[A-Za-z]+" id="fname"></label>
                 <label class="top">Last Name* <input type="text" name="lname" required pattern="[A-Za-z]+" id="lname"></label>
-                <label class="top">Business Position Title* <input type="text" name="businesPositionTitle" pattern="^[a-zA\s\-]{7,}$" id="businesPositionTitle" required></label>
+                <label class="top">Business Position Title* <input type="text" name="businesPositionTitle" pattern="^[a-zA-Z\s\-]{7,}$" id="businesPositionTitle" required></label>
                 <label class="top">Email* <input type="email" name="email" placeholder="someone@gmail.com" required id="email"></label>
                 <label class="top">Phone* <input type="tel" name="phone" placeholder="1235551234" required id="phone"></label>
                 <label class="top">Business Name* <input type="text" name="businessName" required id="businessName"></label>
