--- a/chamber/join.html
+++ b/chamber/join.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:title" content="Santiago Chamber of Commerce">
+    <meta property="og:title" content="Santiago Chamber of Commerce Join Us">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://ernesto-quispe.github.io/wdd230/chamber/images/pexels-alisha-lubben-2017747.jpg">
     <meta property="og:url" content="https://ernesto-quispe.github.io/wdd230/chamber">
-    <title>Santiago Chamber of Commerce</title>
-    <meta name="description" content="Ernesto Quispe | WDD 230 - Webfrontend Development | Santiago Chamber of Commerce Web Page.">
+    <title>Santiago Chamber of Commerce Join Us</title>
+    <meta name="description" content="Ernesto Quispe | WDD 230 - Webfrontend Development | Santiago Chamber of Commerce Join Page.">
     <meta name="author" content="Ernesto Quispe">
     <link rel="icon" href="images/ccs.ico">
     <link
