--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
         </div>
         <h2>WDD 230: Web Frontend Development</h2>
-        <section class="card">
+        <!-- <section class="card">
             <h3>Learning Activities</h3>
             <ul>
                 <li>Week1:
@@ -92,8 +92,17 @@
                     <a href="https://ernesto-quispe.github.io/wdd230/lesson08/tablebuild.html" target="_blank">HTML Tables</a>
                     <span> | </span>
                     <a href="https://ernesto-quispe.github.io/wdd230/lesson08/form-start/Form-start/index.html" target="_blank">HTML Forms</a>
-                </li>                
+                </li>   
+                <li>Week9:
+                    <a href="https://ernesto-quispe.github.io/wdd230/lesson09/new-ward-members.json" target="_blank">Json</a>
+                    <span> | </span>
+                    <a href="https://ernesto-quispe.github.io/wdd230/lesson09/prophets.html" target="_blank">Latter-day Prophets</a>
+                </li>               
             </ul>
+        </section> -->
+
+        <section class="card" id="links">
+              
         </section>
 
         <section class="card">
@@ -113,6 +122,7 @@
     <script src="scripts/getdates.js"></script>
     <script src="scripts/menu.js"></script>
     <script src="scripts/visits.js"></script>
+    <script src="scripts/links.js"></script>
 </body>
 
 </html>
