--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:title" content="Santiago Chamber of Commerce Thank You Page">
+    <meta property="og:title" content="Santiago Chamber of Commerce">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://ernesto-quispe.github.io/wdd230/chamber/images/pexels-alisha-lubben-2017747.jpg">
     <meta property="og:url" content="https://ernesto-quispe.github.io/wdd230/chamber">
-    <title>Santiago Chamber of Commerce Thank You Page</title>
-    <meta name="description" content="Ernesto Quispe | WDD 230 - Webfrontend Development | Santiago Chamber of Commerce Thank You Page.">
+    <title>Santiago Chamber of Commerce</title>
+    <meta name="description" content="Ernesto Quispe | WDD 230 - Webfrontend Development | Santiago Chamber of Commerce Web Page.">
     <meta name="author" content="Ernesto Quispe">
     <link rel="icon" href="images/ccs.ico">
     <link
@@ -37,8 +37,9 @@
       </nav>
     </header>
   
-    <main>
-        <p>Thank you, your information will be reviewed and we will get back to you in 2-5 business days.</p>
+    <main class="directoryMain">
+
+      <section id="directory-list"></section>
     </main>
 
     <footer>
