--- a/chamber/join.html
+++ b/chamber/join.html
@@ -32,7 +32,7 @@
       <nav class="navigation">
         <a href="index.html" class="navLinks active">Home</a>
         <a href="discover.html" class="navLinks">Discover</a>
-        <a href="#" class="navLinks">Directory</a>
+        <a href="directory.html" class="navLinks">Directory</a>
         <a href="join.html" class="navLinks">Join</a>
       </nav>
     </header>
