--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -38,8 +38,13 @@
     </header>
   
     <main class="directoryMain">
+      <div class="menu">
+        <button id="grid">⏹️Grid</button>
+        <button id="list">📄List</button>
+      </div>
 
-      <section id="directory-list"></section>
+      <section id="directory-list" class="grid"></section>
+
     </main>
 
     <footer>
