--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -39,8 +39,11 @@
   
     <main class="directoryMain">
       <div class="menu">
-        <button id="grid">⏹️Grid</button>
-        <button id="list">📄List</button>
+        <h1>Business Members</h1>
+        <div id="directory-button">
+          <button id="grid">⏹️Grid</button>
+          <button id="list">📄List</button>
+        </div>
       </div>
 
       <section id="directory-list" class="grid"></section>
