Course Home Enhancement

--- a/index.html
+++ b/index.html
@@ -107,7 +107,12 @@
 
         <section class="card">
             <h3>Information</h3>
-            <div class="weather">weather</div>
+            <div class="weather">
+                <img src="" alt="" id="weather-icon">
+                <span id="current-temp"></span>
+                <span>-</span>
+                <span id="caption"></span>
+            </div>
             <div class="visits">visits</div>
         </section>
     </main>
@@ -123,6 +128,7 @@
     <script src="scripts/menu.js"></script>
     <script src="scripts/visits.js"></script>
     <script src="scripts/links.js"></script>
+    <script src="scripts/weather.js"></script>
 </body>
 
 </html>
