--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <section class="card">
             <h3>Information</h3>
             <div class="weather">
-                <img src="" alt="" id="weather-icon">
+                <img src="https://placehold.co/10x10" alt="placeholder" id="weather-icon">
                 <span id="current-temp"></span>
                 <span>-</span>
                 <span id="caption"></span>
