Chamber Home Weather

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -36,9 +36,11 @@
         <a href="join.html" class="navLinks">Join</a>
       </nav>
     </header>
-  
     <main>
-
+      <div id="meetbanner" class="displayed">
+        <p>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m. </p>
+        <span id="close-banner">❌</span>
+      </div>
       <!-- <div class="hero">
         <picture>
             <source srcset="images/wdd230-org-small.webp" media="(max-width: 600px)">
@@ -141,41 +143,37 @@
         </section>
       </div>
 
-      <div class="weather-join">
         <section id="weather" class="weather-join-card">
           <h3>Weather for Today</h3>
           <div class="weatherDiv">
+            <div id="current">
+              <h4>Current:</h4>
+              <img src="https://placehold.co/10x10" alt="placeholder" id="weather-icon">
+              <span class="currentTemp" id="current-temp"></span>
+              <span>-</span>
+              <span id="caption"></span>
+            </div>
+
               <div>
-                  Current:
-                  <div>
-                      <span class="currentTemp">45</span>
-                      <span>&deg; F</span>
-                  </div>
-              </div>
-              <div>
-                  Windspeed:
-                  <div>
+                  <h4>Windspeed:</h4>
                       <span class="windSpeed">30</span>
                       <span>MPH</span>
-                  </div>
-              </div>
-              <div>
-                  Wind Chill:
-                  <div>
+                  <h4>Wind Chill:</h4>
                       <span class="windChill"></span>
-                  </div>
+              </div>
+              <div id="forecast">
+
               </div>
           </div>
       </section>
 
 
-        <section class="weather-join-card">
+        <!-- <section class="weather-join-card">
           <h3>
             Join Us
           </h3>
           <img src="https://placehold.co/300x200/png" alt="Place holder for join us button">
-        </section>
-      </div>
+        </section> -->
     </main>
 
     <footer>
@@ -197,5 +195,7 @@
     <script src="scripts/slides.js"></script>
     <script src="scripts/slider.js"></script>
     <script src="scripts/windchill.js"></script>
+    <script src="scripts/weather.js"></script>
+    <script src="scripts/banner.js"></script>
   </body>
 </html>
